# MCTS-Puissance-4

./: CMakeLists.txt  README.md
docs/: projet_class.puml
include/: JHP4.hpp  JMCTS2.hpp  P4.hpp  projet.hpp
src/: JHP4.cpp  P4.cpp  main.cpp  test_jmcts2.cpp
test4_JMCTS2_0.5/: jhp4.cpp  jhp4.hpp  p4.cpp  p4.hpp  projet.cpp  projet.hpp  resultat.hpp  test_JMCTS2  test_JMCTS2.cpp  test_ai_vs_ai  test_ai_vs_ai.cpp  test_championnat  test_championnat.cpp  test_p4  test_p4.cpp  test_pa.cpp
test4_JMCTS2_0.5/test_p4.dSYM/Contents/Resources/DWARF/: test_p4
test4_JMCTS2_0.5/test_p4.dSYM/Contents/Resources/Relocations/aarch64/: test_p4.yml
test_4_championnat_OK/: p4.cpp  projet.hpp  projet.md  test_ai_vs_ai  test_championnat  test_championnat.cpp  test_pa
test_4_championnat_OK/test_p4.dSYM/Contents/: Info.plist
test_4_championnat_OK/test_pa.dSYM/Contents/: Info.plist
test_4_championnat_OK/test_pa.dSYM/Contents/Resources/DWARF/: test_pa
test_4_championnat_OK/test_pa.dSYM/Contents/Resources/Relocations/aarch64/: test_pa.yml
tests/: test_p4.cpp
